<resources>
    <string name="app_name">Chart-r</string>
    <string name="username">Enter username</string>
    <string name="firstName">Enter First name:</string>
    <string name="lastName">Enter Last name:</string>
    <string name="password">Enter password</string>
    <string name="passwordSignup">Enter password:</string>
    <string name ="ConfirmPassword">Confirm password: </string>
    <string name="email">Enter email:</string>
    <string name="SignInButton">Log in </string>
    <string name="SignupButton">Sign up</string>
</resources>
