<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chart_r.Signup">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="16"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="SIGN UP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        tools:text="@string/SignupButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="Enter First name:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/firstName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="Enter Last name:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/lastName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Enter email:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="Enter username:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Confirm password:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/ConfirmPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Enter password:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/passwordSignup" />
</android.support.constraint.ConstraintLayout>
